# blog-crew

./: .env.example  .gitignore  README.md  pyproject.toml
src/blog_post_writer/: crew.py  main.py
src/blog_post_writer/config/: agents.yaml  tasks.yaml
