[project]
name = "blog-crew"
version = "0.1.0"
description = ""
authors = [
    {name = "Stuart McHattie"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "crewai (>=0.120.1,<0.121.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
