[project]
name = "blog_post_writer"
version = "0.1.0"
description = "blog-post-writer using crewAI"
authors = [{ name = "Stuart McHattie" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
blog_post_writer = "blog_post_writer.main:run"
run_crew = "blog_post_writer.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
